Дополнительный ворнинг при включении / выключении синхронизации

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -371,4 +371,11 @@
     <string name="background_location_message">Для того, чтобы приложение NextGIS могло записывать треки в фоне (когда приложение свернуто), нужно разрешить
         доступ к фоновой геолокации. Иначе трек будет записываться только тогда когда приложение развернуто. Пожалуйста, выберите \'%s\'.</string>
     <string name="background_location_always">Разрешить в любом режиме</string>
+    <string name="sync_delete_alert_turnon">Если вы изменяли этот слой вы можете потерять новые данные после включения синхронизации. Убедитесь, что вы сохранили результаты своей работы перед включением синхронизации.
+</string>
+    <string name="sync_turn_on_confirm">ВКЛЮЧИТЬ</string>
+    <string name="sync_turn_off_confirm">ОТКЛЮЧИТЬ</string>
+    <string name="sync_delete_alert_turnoff">Все несинхронизированные данные и данные собранные после отключения синхронизации будут потеряны после включения синхронизации. Убедитесь, что вы синхронизировали данные или сохранили результаты своей работы перед отключением синхронизации.
+</string>
+
 </resources>
