Добавлено сохранение слоя в файл

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -377,5 +377,7 @@
     <string name="sync_turn_off_confirm">ОТКЛЮЧИТЬ</string>
     <string name="sync_delete_alert_turnoff">Все несинхронизированные данные и данные собранные после отключения синхронизации будут потеряны после включения синхронизации. Убедитесь, что вы синхронизировали данные или сохранили результаты своей работы перед отключением синхронизации.
 </string>
+    <string name="save_complete">Сохранение завершено</string>
+    <string name="error_on_save">Ошибка при сохранении объекта</string>
 
 </resources>
