Added available choose GPX track fiiles to backup bundle

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -379,5 +379,6 @@
 </string>
     <string name="save_complete">Сохранение завершено</string>
     <string name="error_on_save">Ошибка при сохранении объекта</string>
+    <string name="tracks_to_archive">(Мои треки)</string>
 
 </resources>
