some prompt fix

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -395,12 +395,10 @@
     <string name="clear">очистить</string>
     <string name="no_storages_error">Странное поведение - нет ни одного хранилища,нечего выбирать,попробуйте перезагрузить устройство</string>
     <string name="clean">Очистить</string>
+    <string name="export_options">Параметры экспорта:</string>
+    <string name="use_keys">Использовать ключи</string>
+    <string name="use_names">Использовать наименования полей вместо ключей</string>
 
     <string name="pointz_alert">Ваш проект не может быть добавлен так как содержит слои GeometryZ. Исправьте их. https://toolbox.nextgis.com/operation/flatten</string>
-
-
     <string name="pointz_alert_title">Ошибка</string>
-
-
-
 </resources>
