--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -405,4 +405,13 @@
     https://toolbox.nextgis.com/operation/flatten</string>
 
     <string name="pointz_alert_title">Error</string>
+
+    <string name="sort_ascending">Sort Ascending</string>
+    <string name="sort_descending">Sort Descending</string>
+    <string name="sort_unsorted">Unsorted</string>
+    <string name="loading">loading...</string>
+
+    <string name="loading_data_inprogress">loading data in progress</string>
+
+
 </resources>
