--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -409,5 +409,8 @@
     <string name="loading">загружается...</string>
 
     <string name="loading_data_inprogress">загрузка данных в прогрессе</string>
+    <string name="action_devinfo">Информация об устройстве</string>
+    <string name="error_account_create">Ошибка создания аккаунта</string>
+
 
 </resources>
