--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -366,6 +366,7 @@
     <string name="ngid_onpremise">Change authorization server</string>
     <string name="ngid_server">Currently used: %s</string>
     <string name="ngid_type_url">Type URL</string>
+    <string name="ngid_server_caption">Auth server</string>
     <string name="get_file_manually">No installed apps found to open file %1$s. You can pick it manually at path:\n%2$s</string>
     <string name="not_enough_space">Not enough space</string>
     <string name="free_space_message">You need at least %1$s free, but you have %2$s only.</string>
@@ -414,6 +415,11 @@
     <string name="loading_data_inprogress">loading data in progress</string>
     <string name="error_account_create">Account creation error</string>
     <string name="action_devinfo">Device Info</string>
+    <string name="delete_object">Delete object?</string>
 
+    <string name="help_custom_auth_server"><a href="https://docs.nextgis.com/docs_ngid/source/toc.html">Help</a></string>
+
+    <string name="ng_server">NextGIS Cloud</string>
+    <string name="custom_server">NextGIS ID from custom server</string>
 
 </resources>
