added about app strings

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -424,4 +424,10 @@
     <string name="deny">"Отклонить"</string>
     <string name="account_permissions">NextGIS Mobile нужен доступ к контактам для создания и управления учетными записями на устройстве для синхронизации с вашей Веб-ГИС</string>
     <string name="no_contancts_access">Вы не сможете использовать NGW аккаунт без доступа к контактам</string>
+
+    <string name="web">Сайт</string>
+
+    <string name="web_src">https://nextgis.ru/nextgis-collector/</string>
+    <string name="manual_url">https://docs.nextgis.ru/docs_collector/source/</string>
+
 </resources>
