--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -54,7 +54,10 @@
     <string name="ngw_layer_add">Add from Web GIS</string>
     <string name="ngw_account_already_exists">Account already exist</string>
     <string name="ngw_accounts">Web GIS</string>
-    <string name="ngw_account_add">Add Web GIS</string>
+
+    <string name="ngw_account_add_item">Add Web GIS</string>
+    <string name="ngw_account_add">Sign in</string>
+
     <string name="ngw_account_delete">Delete account</string>
     <string name="ngw_account_delete_summary">Delete account. All layers connected with this account will be deleted too. Active synchronization will be stopped.</string>
     <string name="ngw_account_delete_warn_msg">Account will be deleted!\nAll account layers will be deleted!\nCurrent sync will be stopped!</string>
@@ -303,7 +306,7 @@
     <string name="new_gis">Create GIS</string>
     <string name="manual_ngw">Switch to advanced</string>
     <string name="instance_name">Web GIS address</string>
-    <string name="ngw_from_my_nextgis">Do you have GIS? Sign up at my.nextgis.com to get your own one!</string>
+    <string name="ngw_from_my_nextgis">Sign in with your NextGIS account or <a href="https://my.nextgis.com/signup/0">sing up</a>.</string>
     <string name="ngid_settings">Account</string>
     <string name="ngid_account_new">Sign up</string>
     <string name="guest">Guest</string>
