prompts fix, icons fix

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -45,7 +45,7 @@
     <string name="login">Войти</string>
     <string name="user_name">Имя пользователя</string>
     <string name="user_name_ngw">Логин Веб ГИС</string>
-    <string name="user_name_ngid">Логин или E-mail</string>
+    <string name="user_name_ngid">E-mail</string>
     <string name="canceled">Отменено</string>
     <string name="ngw_account_already_exists">Учетная запись уже существует</string>
     <string name="error_login">Неправильное имя или пароль</string>
@@ -282,7 +282,8 @@
     <string name="new_gis">Создать ГИС</string>
     <string name="manual_ngw">Расширенные настройки</string>
     <string name="instance_name">Адрес Веб ГИС</string>
-    <string name="ngw_from_my_nextgis">Войдите с учётной записью NextGIS. <a href="https://my.nextgis.com/signup/0">Зарегистрируйтесь</a>, чтобы получить учётную запись.</string>
+    <string name="ngw_login_descr_1">Подключить Веб ГИС</string>
+    <string name="ngw_from_my_nextgis">Веб ГИС - это облачное хранилище геоданных. Укажите её данные, чтобы подключиться или <a href="https://my.nextgis.com/webgis/">создайте</a>, если у вас его еще нет.</string>
     <string name="guest">Гость</string>
     <string name="field_not_filled">Некоторые поля пустые</string>
     <string name="web_map">Веб карта</string>
